Final report changes

--- a/docs/report/Sections/Abstract.tex
+++ b/docs/report/Sections/Abstract.tex
@@ -1,1 +1,1 @@
-Computational musical composition tries to teach a computer what the best sequence of notes to play would be. This can become an interesting task, since there is no specific process to measure whether one composition will sound better than another one, therefore, its quality value depend on each person musical preferences. In this project, we proposed using Deep Reinforcement Learning to capture the feedback from users during training so that way the computer can learn based on what the user consider is a good melody. Our project confirmed that the musical composition problem can fit into a Reinforcement Learning problem. It was able to learn policies according to the feedback that it was given while it played its composition and store it in order to continue the learning process later. Results of the project are available in Github\footnote{Code available at: https://github.com/franciscovilchezv/eurydice.rl}.
+Computational musical composition tries to teach a computer what would be the best sequence of notes to play. This is an interesting task, since there is no specific process to measure whether one composition will sound better than another one; therefore, their quality will depend on each person musical preferences. In this project, we proposed using Deep Reinforcement Learning to capture the feedback from users during training so that way the computer can learn based on what the user consider is a good melody. Our project confirmed that the musical composition problem fits into a Reinforcement Learning problem. The computer was able to learn policies according to the feedback given by the user while it played its composition. The computer also stores the progress learned in order to continue learning later. Results and code of the project are available in Github\footnote{Code available at: \href{https://github.com/franciscovilchezv/eurydice.rl}{github.com/franciscovilchezv/eurydice.rl}}.
