--- a/docs/report/Sections/Conclusion.tex
+++ b/docs/report/Sections/Conclusion.tex
@@ -1,3 +1,3 @@
-In this project we were able to apply Q-learning and Deep Q-learning in order to teach the computer an optimal policy for a sequence of musical notes. We created an note encoding method that allowed our algorithm to correctly manipulate musical notes, and proposed ideas in better encoding methods using relative values for improving this results. We defined and developed the components of a Reinforcement Learning algorithm in the musical composition environment. We create an automated reward process for testing and development purposes, and after that implemented the human-computer reward interaction process. A process for reproducing the results and getting feedback for the user was created in order to allow the fluid training process. We successfully applied Q-learning for learning an optimal policy in our musical environment, and later applied Deep Q-learning not getting as good results as with the plain Q-learning.
+In this project we were able to apply Q-learning and Deep Q-learning in order to teach the computer an optimal policy for a sequence of musical notes. We created a note encoding method that allowed our algorithm to correctly manipulate musical notes, and proposed ideas for better encoding methods using relative values for improving this results. We defined and developed the components of a Reinforcement Learning algorithm in the musical composition environment. We create an automated reward process for testing and development purposes, and after that, implemented the human-computer reward interaction process. A process for reproducing the results and getting feedback from the user was created in order to allow the fluid training process. We successfully applied Q-learning for learning an optimal policy in our musical environment, and later applied Deep Q-learning not getting as good results as with the plain Q-learning.
 
-We consider that improvements are still needed in the notes encoding for start storing for information about the notes, e.g. duration, tonality, harmonic progression, dynamics, instrument, etc. Additionally, more investigation is needed in the usage of Neural Networks for storing the transition values, since other techniques such as Recurrent Neural Networks could provide better results that the ones obtained. Finally, consider we could try to usage of previously validated melodies in order to speed up the training process and create some diversification of musical compositions in which we can base our training.
+We consider that improvements are still needed in the notes encoding in order to start storing for information about the notes, e.g. duration, tonality, harmonic progression, dynamics, instrument, etc. Additionally, more investigation is needed in the usage of Neural Networks for storing the transition values, since other techniques such as Recurrent Neural Networks could provide better results that the ones obtained. Finally, we consider that we could try to usage of previously validated melodies in order to speed up the training process and create some diversification of musical compositions on which we can base our training.
